--- a/package.json
+++ b/package.json
@@ -51,13 +51,11 @@
         "@types/fs-extra": "4.0.2",
         "@types/node": "^9.4.6",
         "@types/mocha": "^2.2.42",
-        "@types/request-promise-native": "^1.0.14",
-        "@types/lodash": "4.14.104"
+        "@types/request-promise-native": "^1.0.14"
     },
     "dependencies": {
         "fs-extra": "^5.0.0",
-        "lodash": "^4.17.5",
-        "xml-parse": "^0.3.1",
+        "html-entities": "^1.2.1",
         "request-promise-native": "^1.0.5"
     }
 }
