--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
             "type": "object",
             "title": "Finesse layout editor configuration",
             "properties": {
-                "fle.showLayoutShortcut": {
+                "fle.showLayoutListShortcut": {
                     "type": "boolean",
                     "default": true,
-                    "description": "Finesse node shortcut"
+                    "description": "Layout configuration list shortcut"
+                },
+                "fle.layoutConfigurationPath": {
+                    "type": "string",
+                    "default": null,
+                    "description": "Layout configuration path"
                 }
             }
         },
@@ -34,6 +39,10 @@
             {
                 "command": "fle.setLayout",
                 "title": "Finesse: Set current file as layout"
+            },
+            {
+                "command": "fle.loadConfiguredLayout",
+                "title": "Finesse: Set configured layout"
             }
         ]
     },
