--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "finessecodeextension",
     "displayName": "FinesseCodeExtension",
-    "description": "",
-    "version": "0.0.1",
-    "publisher": "viteazr",
+    "description": "Gadgets Finesse Dev tool",
+    "version": "0.1.0",
+    "publisher": "vitezr",
     "engines": {
         "vscode": "^1.20.0"
     },
@@ -28,6 +28,11 @@
                     "type": "string",
                     "default": null,
                     "description": "Layout configuration path"
+                },
+                "fle.gadgetServerUri": {
+                    "type": "string",
+                    "default": "http://localhost/GadgetsVS",
+                    "description": "Layout configuration path"
                 }
             }
         },
@@ -35,6 +40,10 @@
             {
                 "command": "fle.getLayout",
                 "title": "Finesse: GET layout"
+            },
+            {
+                "command": "fle.switchFinesse",
+                "title": "Finesse: Switch node"
             },
             {
                 "command": "fle.setLayout",
@@ -64,6 +73,7 @@
     },
     "dependencies": {
         "fs-extra": "^5.0.0",
+        "request": "^2.83.0",
         "html-entities": "^1.2.1",
         "request-promise-native": "^1.0.5"
     }
