--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "finessecodeextension",
     "displayName": "FinesseCodeExtension",
     "description": "Gadgets Finesse Dev tool",
-    "version": "0.1.1",
+    "version": "1.0.0",
     "publisher": "vitezr",
     "engines": {
         "vscode": "^1.20.0"
@@ -31,7 +31,7 @@
                 },
                 "fle.quickPickFinesseNode": {
                     "type": "bool",
-                    "default": false,
+                    "default": true,
                     "description": "Quick Pick Finesse Node"
                 },
                 "fle.appPool": {
