--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
             "type": "object",
             "title": "Finesse layout editor configuration",
             "properties": {
+                "fle.layoutConfigurationPath": {
+                    "type": "string",
+                    "default": null,
+                    "description": "Override the Gadgets/Layouts configuration path"
+                },
                 "fle.gadgetServerUri": {
                     "type": "string",
                     "default": "https://localhost/GadgetsVS",
