--- a/package.json
+++ b/package.json
@@ -97,6 +97,10 @@
             {
                 "command": "fle.tfsOpenCurrentIterationBoard",
                 "title": "TFS: Open current iteration board"
+            },
+            {
+                "command": "fle.tfsGetAssociateTask",
+                "title": "TFS: Get associate tasks"
             }
         ]
     },
@@ -108,27 +112,29 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
+        "@types/copy-paste": "^1.1.30",
         "@types/fs-extra": "4.0.2",
         "@types/git-branch": "^2.0.0",
         "@types/mocha": "^2.2.42",
         "@types/node": "^9.4.6",
         "@types/open": "0.0.29",
         "@types/request-promise-native": "^1.0.14",
-        "@types/xmlbuilder": "^0.0.32",
         "@types/underscore": "^1.8.9",
+        "@types/xmlbuilder": "^0.0.32",
         "tslint": "^5.8.0",
         "typescript": "^2.6.1",
         "vscode": "^1.1.6"
     },
     "dependencies": {
         "azure-devops-node-api": "^6.6.0",
+        "copy-paste": "^1.3.0",
         "fs-extra": "^5.0.0",
-        "underscore": "^1.9.1",
         "git-branch": "^2.0.1",
         "html-entities": "^1.2.1",
         "open": "0.0.5",
         "request": "^2.83.0",
         "request-promise-native": "^1.0.5",
+        "underscore": "^1.9.1",
         "xmlbuilder": "^9.0.7"
     }
 }
