--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "version": "2.1.0",
     "publisher": "vitezr",
     "engines": {
-        "vscode": "^1.20.0"
+        "vscode": "^1.30.0"
     },
     "repository": {
         "url": "https://github.com/2Ring/FinesseCodeExtension"
@@ -121,6 +121,7 @@
         "@types/copy-paste": "^1.1.30",
         "@types/fs-extra": "4.0.2",
         "@types/git-branch": "^2.0.0",
+        "@types/glob": "^7.1.1",
         "@types/mocha": "^2.2.42",
         "@types/node": "^9.4.6",
         "@types/open": "0.0.29",
@@ -136,6 +137,7 @@
         "copy-paste": "^1.3.0",
         "fs-extra": "^5.0.0",
         "git-branch": "^2.0.1",
+        "glob": "^7.1.3",
         "html-entities": "^1.2.1",
         "open": "0.0.5",
         "request": "^2.83.0",
